--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "name": "hazdryx/q.php",
     "description": "A lightweight framework for MySQL database access and manipulation.",
+    "version": "1.0.0",
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
+    
     "require-dev": {
         "phpunit/phpunit": "9"
     }
