--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies
-    - uses: php-actions/composer@v5
+      uses: php-actions/composer@v5
       with:
         php_version: 8.0
         version: 2
     - name: Test Code with PHPUnit
-    - uses: php-actions/phpunit@v2
+      uses: php-actions/phpunit@v2
       with:
         php_version: 8.0
         version: 9
