Tests use --testdox for more information.

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Restore Dependencies
       run: composer update
     - name: Run PHPUnit Tests
-      run: vendor/bin/phpunit tests
+      run: vendor/bin/phpunit tests --testdox
     
     
