--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "name": "hazdryx/q.php",
-    "description": "A lightweight framework for secure MySQL database access and manipulation in PHP.",
+    "description": "A lightweight PHP framework for secure MySQL database access and manipulation.",
     "version": "0.1.0",
     "autoload": {
         "classmap": [
             "src/"
         ]
+    },
+    "require": {
+        "php": ">=8.0"
     },
     
     "require-dev": {
