--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         ]
     },
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "ext-mysqli": "^8.0"
     },
     
     "require-dev": {
