--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "hazdryx/q.php",
     "description": "A lightweight PHP framework for secure MySQL database access and manipulation.",
     "version": "0.1.0",
+    "license": "MIT",
+
     "autoload": {
         "classmap": [
             "src/"
@@ -11,7 +13,6 @@
         "php": ">=8.0",
         "ext-mysqli": "^8.0"
     },
-    
     "require-dev": {
         "phpunit/phpunit": "9.5"
     }
