--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "autoload": {
         "classmap": [
             "src/"
+        ],
+        "files": [
+            "src/Utils.php"
         ]
     },
     "require": {
